Bug 72022 - Integrated help ignored if installed
Summary: Integrated help ignored if installed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: x86-64 (AMD64) All
: highest blocker
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords: regression
: 72419 72724 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-11-26 09:32 UTC by Jean-Baptiste Faure
Modified: 2014-02-05 11:32 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-11-26 09:32:23 UTC
steps to reproduce:
1/ install version 4.2.0.beta1 and the helppack corresponding to your langpack
2/ open the startcenter or the module you want
3/ press F1 or menu Help > Help of LibreOffice (F1)

current behavior: the help website is opened
expected behavior: the integrated help is opened

Reproduced with LibreOfficeDev (beta1) and my own build, under Ubuntu 13.10 x86-64. Worked sometime ago (see bug 70276).

Best regards. JBF
Comment 1 Gerry 2013-11-26 14:19:39 UTC
@Jean-Baptiste: Are you sure that the helppack was successfully installed? On Ubuntu 13.04, the German helppack did install, but dpkg refused to configure it for some reason.
Comment 2 Jean-Baptiste Faure 2013-11-26 18:05:06 UTC
(In reply to comment #1)
> @Jean-Baptiste: Are you sure that the helppack was successfully installed?
> On Ubuntu 13.04, the German helppack did install, but dpkg refused to
> configure it for some reason.

Yes I am sure. I reinstalled the helppack FR without error message from dpkg.
Even the with En-US helppack installed en the UI in English, the integrated help is ignored.
At least you confirmed that there is a problem with the helppack ;-)

Best regards. JBF
Comment 3 Cor Nouws 2013-11-28 10:50:48 UTC
same problem here
Comment 4 Jacques Guilleron 2013-12-01 10:09:03 UTC
Same behavior with LO 4.2.0.0.beta1
Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7
on Windows 4 Home Premium

Regards,

Jacques
Comment 5 Thomas Hackert 2013-12-05 13:17:02 UTC
Hello Jean-Baptiste, *,
I can confirm it with LO Version: 4.2.0.0.beta2 Build-ID: 1a27be92e320f97c20d581a69ef1c8b99ea9885d and installed Germanophone help- as well as langpack ... :( But I reported it in the past on the QA ML (http://lists.freedesktop.org/archives/libreoffice-qa/2013-November/005635.html and http://lists.freedesktop.org/archives/libreoffice-qa/2013-November/005822.html), which were ignored for whatever reason ... :( This one should be fixed really fast and I think, it should be added to the MAB 4.2 bug.
HTH
Thomas.
Comment 6 Andras Timar 2013-12-05 14:36:11 UTC
LibreOffice tries to open "helpen-US" instead of "help/en-US", I think we are the victims of a String->OUString conversion, but let's see...
Comment 7 Caolán McNamara 2013-12-06 13:23:42 UTC
regression since 58fa3d50aa43102cea8690fd6bf51fb80c007955
Comment 8 Commit Notification 2013-12-06 13:28:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=57b15f2dcd2963808b8af3f0665450ef81bb3eb8

Resolves: fdo#72022  Integrated help ignored if installed



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-12-06 13:38:56 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=268653618ac01796785622e246f6d230db27ca62&h=libreoffice-4-2

Resolves: fdo#72022  Integrated help ignored if installed


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-06 15:01:39 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b713bafe4d8f7fc4f5dfe2b794c07fb713a3462

Related: fdo#72022 internal links busted



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-12-06 15:01:59 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71771f7cf42619b3f8977b31f5ec33ed05bad6ed&h=libreoffice-4-2

Related: fdo#72022 internal links busted


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Jean-Baptiste Faure 2013-12-06 18:40:27 UTC
Thank you very much for the fix, it works as expected.
Verified in Version: 4.2.0.0.beta2+ Build ID: a125b9da3035a584ffd2203f2b3c71c972b8bd4c under Ubuntu 13.10 x86-64

Best regards. JBF
Comment 13 Stanislav Horacek 2013-12-06 21:29:58 UTC
*** Bug 72419 has been marked as a duplicate of this bug. ***
Comment 14 Jacques Guilleron 2013-12-15 09:05:00 UTC
*** Bug 72724 has been marked as a duplicate of this bug. ***
Comment 15 Martin Srebotnjak 2013-12-26 21:34:51 UTC
I still see this on OSX 4.2.0.1 (RC1). Reopening.
Comment 16 jfjb1 2013-12-27 16:57:02 UTC
This behavior does not occur with LO 4.1.4.2
UNLESS 
the helppack is not installed in its default install directory.

JFJB
Comment 17 jfjb1 2013-12-27 17:19:48 UTC
PS. Is the Help path hardcoded?
Comment 18 Martin Srebotnjak 2013-12-27 21:20:32 UTC
OK, let me get this straight:

This behavior does occur with LO 4.2.0.1 (on OS X)
EVEN WHEN 
the helppack is installed in its default install directory.

It seems a 4.2.0 stopper.

lp, m.
Comment 19 Martin Srebotnjak 2013-12-27 21:22:24 UTC
BTW, on OS X the lang pack includes both localized help and UI localization. In my case LO UI is localized into Slovenian, thus lang pack is properly installed - which means help is installed as well. But it opens wiki help in the browser (Slovenian one).
Comment 20 Cor Nouws 2013-12-27 22:03:25 UTC
On Ubuntu, I have 4.2.0 rc1 and both with a fresh and with an old user profile, it does open the local installed help.
So maybe Mac OS related?
Comment 21 Martin Srebotnjak 2013-12-27 22:04:38 UTC
Should I open a new bugreport?
Comment 22 Cor Nouws 2013-12-27 22:21:52 UTC
(In reply to comment #21)
> Should I open a new bugreport?

maybe - lets wait for some specific Mac - QA imput first, I think..
Comment 23 Jorendc 2013-12-28 13:11:24 UTC
(In reply to comment #22)
> (In reply to comment #21)
> > Should I open a new bugreport?
> 
> maybe - lets wait for some specific Mac - QA imput first, I think..

MacBook Pro Adapter is broken ;-). Will put it on my to-do list.
Comment 24 Alex Thurgood 2013-12-30 22:29:10 UTC
Confirming, clicking on Help in the menu even with the installed help and french lang-pack leads here :

https://help.libreoffice.org/swriter/.uno:HelpIndex?Language=fr&System=MAC&Version=4.2#bm_id3149178


There does however seem to be something wrong with the langpack DMG. It contains the app file, but it also contains a 35Mb LibreOffice.app bundle, which I've never seen before. Seems to be some kind of packaging issue ?


Alex
Comment 25 Alex Thurgood 2013-12-30 22:31:25 UTC
Tested with 
Version: 4.2.0.1
Build ID: 7bf567613a536ded11709b952950c9e8f7181a4a


Alex
Comment 26 Alex Thurgood 2013-12-30 22:51:32 UTC
The unzipped tarball in "LibreOffice Language Pack.app" is only 2.8 Mb and the rest, especially the help (all the jars) seem to be in "LibreOfffice.app".

Unless the packaging has changed, I would say something has gone wrong with the build...
Comment 27 Alex Thurgood 2013-12-30 23:00:16 UTC
Checking the contents of the LibreOffice.app installed in /Applications confirms that only the en_US help is present.


Alex
Comment 28 Thomas Hackert 2014-01-08 18:11:23 UTC
Hello Jean-Baptiste, *,
I have tested it again w/ LO Version: 4.2.0.2 Build-ID: cd65d6220c5694ee7012d7863bcde3455c9e3c30 and installed Germanophone lang- as well as helppack, and it is still reproducible ... :( In 4.2.0.1 it was fixed, but now it reappeared ... :(
HTH
Thomas.

P.S. Why was this bug reported for "x86-64 (AMD64)" and "Windows", when most people confirmed it with any other OS? I set it to "x86-64 (AMD64)" and "All". If you (or someone else) think, it is not adequate, feel free to change it back ... ;)
Comment 29 Jean-Baptiste Faure 2014-01-09 05:19:50 UTC
(In reply to comment #28)
> Hello Jean-Baptiste, *,
> I have tested it again w/ LO Version: 4.2.0.2 Build-ID:
> cd65d6220c5694ee7012d7863bcde3455c9e3c30 and installed Germanophone lang- as
> well as helppack, and it is still reproducible ... :( In 4.2.0.1 it was
> fixed, but now it reappeared ... :(

For me it works as expected on Ubuntu Linux with version 4.2.1.0+ (built at home), will test with the RC2.
> 
> P.S. Why was this bug reported for "x86-64 (AMD64)" and "Windows", when most
> people confirmed it with any other OS? I set it to "x86-64 (AMD64)" and
> "All". If you (or someone else) think, it is not adequate, feel free to
> change it back ... ;)

You can check the history (https://bugs.freedesktop.org/show_activity.cgi?id=72022) of this bug report. The change for Windows was a mistake. Thank you for the correction.
Comment 30 V Stuart Foote 2014-01-09 18:28:33 UTC
On Windows 7 sp1, 64-bit with RC2 with en-US help installed
Version: 4.2.0.2
Build ID: cd65d6220c5694ee7012d7863bcde3455c9e3c30

F1 and the LibreOffice Help (the "lifesaver") both correctly launching indexed to correct article in the integrated help.

Also, the Help button on the start center lands on the project home page. Would prefer the http://www.libreoffice.org/get-help/ page, but seems to be correct otherwise.

So, would say WFM on Windows.
Comment 31 Martin Srebotnjak 2014-01-09 19:24:01 UTC
Hi, Stuart,
 the last part does not seem logical - if help system is installed, the Help button in Start Center should open local help, not some webpage. This goes against the usage of LO on computers not connected into internet. I guess I should open another bug report for that.
But at least local Help works on Win7, as your report.
Also, I am marking this bug as a blocker - this kind of erratic behaviour of "online" help in an office suite cannot be released as official build, so this bug must be squashed before 4.2.0 is released.
Comment 32 Martin Srebotnjak 2014-01-10 01:32:07 UTC
Reporting now also from Win2012 Server with 4.2.0.2 - instead of installed help it opens wiki help (and it opens English, not Slovenian help, I don't know why).

It also has another quirk, localized version has the credits dialog in English (on OS X this is in the localized version's language).

Strange.
Comment 33 Jean-Baptiste Faure 2014-01-10 21:37:19 UTC
Works as expected in version 4.2.0.2 under Linux (Ubuntu 13.10 64 bits).

Best regards. JBF
Comment 34 Martin Srebotnjak 2014-01-13 19:10:53 UTC
Hello, what can be done about this bug before the 4.2.0 release?

This is a stopper - on some systems (without clear logic when this does happen) wiki help opens instead of installed online help. This is a no-go for some government use etc. where internet access while using such tools is not welcome or allowed.

Also it means installing help packs is of no effect.

It is not like some command in UI is not translated and it can wait for 4.2.1 or later ...
Comment 35 Alex Thurgood 2014-01-14 10:38:37 UTC
Confirming also on OSX with 4.2 rc2, that even with the alleged installation of the lang-pack, both F1 and clicking on the Help button in the StartCenter point the user to the web site.


As I mention in comments 24, 25, and 26, the packaging of the OSX lang-pack is wrong.

.DS_Store
LibreOffice Language Pack.app
LibreOffice.app
READMEs 

Quite why there is another LibreOffice.app in the lang-pack image is beyond me. Previously, this was all packaged into a compressed file which was in the LibreOffice Language Pack.app bundle, so something has gone wrong with the build packaging process.


Alex
Comment 36 Alex Thurgood 2014-01-14 10:44:35 UTC
@Norbert : any idea what's happening here ?


Alex
Comment 37 Florian Reisinger 2014-01-14 11:31:59 UTC
Someone @Mac could pls try with this: http://dev-builds.libreoffice.org/daily/libreoffice-4-2/MacOSX-10.8@21-10.7SDK/current/
Comment 38 Alex Thurgood 2014-01-14 12:58:42 UTC
@Florian

8.7M for the FR langpack is way too small



Alex
Comment 39 Alex Thurgood 2014-01-14 14:09:43 UTC
Confirming that the daily 4.2.1, which installs as LibreOfficeDev on OSX, doesn't install French help if the FR langpack is installed.


Alex
Comment 40 Björn Michaelsen 2014-01-17 09:40:30 UTC
(This is an automated message.)

Setting priority to highest as this is a 4.2 MAB. This is part of an effort to make the importance of MAB reflected in priority too.
Comment 41 Alex Thurgood 2014-02-05 11:32:46 UTC
This is fixed for me on LO 4.1.4.2 release build on OSX Mavericks.

Also fixed in my own master 4.3 build from yesterday afternoon.

I am assuming that the fix has been pushed to 4.2 tree also.

Setting to resolved fixed, if I'm wrong, please change it back as appropriate.