Resolves: fdo#72022  Integrated help ignored if installed

regression since 58fa3d50aa43102cea8690fd6bf51fb80c007955

Change-Id: Ia20f28daace30181652bbbbec3f9845045db03b4